WebCore/platform/graphics/gtk/MediaPlayerPrivateGStreamer.h
@@ -90,7 +90,6 @@ namespace WebCore {
             void setSize(const IntSize&);
 
             void loadStateChanged();
-            void rateChanged();
             void sizeChanged();
             void timeChanged();
             void volumeChanged();
@@ -126,6 +125,7 @@ namespace WebCore {
             GstElement* m_videoSink;
             GstElement* m_source;
             GstClockTime m_seekTime;
+            bool m_changingRate;
             float m_endTime;
             bool m_isEndReached;
             MediaPlayer::NetworkState m_networkState;
